# tia-py

./: .gitignore  Cargo.toml  README.md  pyproject.toml
python/tia_py/: __init__.py
src/: lib.rs
src/bindings/: analyzer.rs  hello.rs  mod.rs
src/parser/: mod.rs  nodes.rs  python.rs
tests/: parser_nodes.rs  test_python_stub.py
