[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "tia-py"
version = "0.1.0"
description = "Static Test Impact Analysis (TIA) for Python (static analysis, no coverage)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["testing", "static-analysis", "tia", "pytest"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Testing",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.maturin]
python-source = "python"
module-name = "tia_py._native"

[tool.pytest.ini_options]
testpaths = ["tests"]